fix security issue

--- a/_posts/2023-05-25-sandbox.md
+++ b/_posts/2023-05-25-sandbox.md
@@ -2,7 +2,7 @@
 title:  "BECU(Boeing Employees' Credit Union): Software Engineer, Capstone Program"
 categories:
   - Work
-permalink: /becu
+permalink: /sandbox
 ---
 
 * A sandbox application using Python FastAPI framework as backend for securely testing malicious software and website.
